Native/Test/KL/CORE-164.out
CORE-164.kl:9:2: error: code is unreachable
