Native/Test/KL/CORE-164.kl
function entry( )
{
	switch( 0 )
	{
	case 0:
		break;
	case 1:
		break;
	var Integer blah[];
	
	}
}
